scroll quotable controls to fix quote cut off

--- a/less/quotable.less
+++ b/less/quotable.less
@@ -42,6 +42,11 @@ canvas {
         width: 640px;
     }
 
+    .controls {
+        overflow:scroll;
+        max-height: 80vh;
+    }
+
     @media screen and (max-width: @screen-sm-max){
         display: block;
 
